[ADD] GET /info
