# assets/api.yml
@@ -406,6 +406,16 @@ paths:
           $ref: '#/components/responses/Error'
   
   # STATUS
+  /info:
+    get:
+      tags:
+        - Status
+      responses:
+        200:
+          $ref: '#/components/responses/info'
+        default:
+          $ref: '#/components/responses/Error'
+
   /health:
     get:
       tags:
@@ -566,6 +576,13 @@ components:
             $ref: '#/components/schemas/EventMetrics'
     
     # STATUS
+    info:
+      description: Microservice general info reported.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Info'
+
     health:
       description: Microservice general health state reported.
       content:
@@ -1102,6 +1119,18 @@ components:
         - publish
     
     # STATUS
+    Info:
+      type: object
+      properties:
+        creationDate:
+          $ref: '#/components/schemas/Date'
+        description:
+          type: string
+          example: 'Service description!'
+      required:
+        - creationDate
+        - description
+
     Ping:
       type: object
       properties:
