# src/routers/apiRouter.js
@@ -23,6 +23,7 @@ module.exports = function apiRouter(
       // STATUS
       .get('/ping', statusController.ping)
       .get('/health', statusController.health)
+      .get('/info', statusController.info)
 
       // ROUTES
 
